--- a/clarify_app/pubspec.yaml
+++ b/clarify_app/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.1.5 <4.0.0'
 
 dependencies:
+  firebase_core: ^2.21.0
   flutter:
     sdk: flutter
 
@@ -14,6 +15,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  firebase_auth: ^4.12.1
 
 flutter:
   uses-material-design: true
