--- a/clarify_app/pubspec.yaml
+++ b/clarify_app/pubspec.yaml
@@ -7,15 +7,44 @@ environment:
   sdk: '>=3.1.5 <4.0.0'
 
 dependencies:
+  dart_openai: ^4.0.0
+  flutter_dotenv: ^5.1.0
   firebase_core: ^2.21.0
   flutter:
     sdk: flutter
+  html: ^0.15.4
+  http: ^1.1.0
+  simple_gradient_text: ^1.3.0
+  url_launcher: ^6.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
   firebase_auth: ^4.12.1
+  flutter_launcher_icons: "^0.13.1"
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/
+    - assets/icon/
+
+    
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/ClarifyAI.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/icon/ClarifyAI.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/icon/ClarifyAI.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/icon/ClarifyAI.png"
