--- a/.gitignore
+++ b/.gitignore
@@ -1,160 +1,90 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-cover/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
+# Miscellaneous
+*.class
 *.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+*.pyc
+*.swp
+.DS_Store
+.atom/
+.buildlog/
+.history
+.svn/
 
-# Flask stuff:
-instance/
-.webassets-cache
+# IntelliJ related
+*.iml
+*.ipr
+*.iws
+.idea/
 
-# Scrapy stuff:
-.scrapy
+# The .vscode folder contains launch configuration and tasks you configure in
+# VS Code which you may wish to be included in version control, so this line
+# is commented out by default.
+#.vscode/
 
-# Sphinx documentation
-docs/_build/
+# Flutter/Dart/Pub related
+**/doc/api/
+**/ios/Flutter/.last_build_id
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
+/build/
 
-# PyBuilder
-.pybuilder/
-target/
+# Web related
+lib/generated_plugin_registrant.dart
 
-# Jupyter Notebook
-.ipynb_checkpoints
+# Symbolication related
+app.*.symbols
 
-# IPython
-profile_default/
-ipython_config.py
+# Obfuscation related
+app.*.map.json
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+# Android Studio will place build artifacts here
+/android/app/debug
+/android/app/profile
+/android/app/release
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
 
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
 
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
-.pdm.toml
+/flutter_chat_ui-1.4.4-hijacked/example
+/emoji_picker-0.1.0-hijacked/example
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
+# Ignore android build
+/android/*
+!/android/build.gradle
+!/android/app/
+/android/app/*
+!/android/app/build.gradle
+!/android/app/google-services.json
+!/android/app/src/
+/android/app/src/*
+!/android/app/src/main/
+!/android/app/src/debug/
+/android/app/src/main/*
+!/android/app/src/main/AndroidManifest.xml
+!/android/app/src/main/res
 
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
+# Ignore ios build
+/ios/*
+!/ios/Runner/
+/ios/Runner/*
+!/ios/Runner/Info.plist
+!ios/Runner/Assets.xcassets/
+!/ios/Runner/AppDelegate.swift
+!/ios/Runner/SplashViewController.swift
 
-# SageMath parsed files
-*.sage.py
+# Web
+/web/
 
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+# Test
+/test/
 
-# Spyder project settings
-.spyderproject
-.spyproject
+# Ignore .vscode
+.vscode
 
-# Rope project settings
-.ropeproject
+# windows
+/windows/
 
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
-
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+# linter
+analysis_options.yaml
