--- a/clarify_app/pubspec.yaml
+++ b/clarify_app/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   http: ^1.1.0
   simple_gradient_text: ^1.3.0
   url_launcher: ^6.2.1
+  flutter_svg: ^2.0.9
 
 dev_dependencies:
   flutter_test:
