--- a/clarify_app/pubspec.yaml
+++ b/clarify_app/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   simple_gradient_text: ^1.3.0
   url_launcher: ^6.2.1
   flutter_svg: ^2.0.9
+  flutter_sound: ^9.2.13
+
 
 dev_dependencies:
   flutter_test:
