--- a/clarify_app/pubspec.yaml
+++ b/clarify_app/pubspec.yaml
@@ -17,6 +17,9 @@ dependencies:
   simple_gradient_text: ^1.3.0
   url_launcher: ^6.2.1
   flutter_svg: ^2.0.9
+  path_provider: ^2.1.1
+  audioplayers: ^5.2.1
+  assets_audio_player: ^3.1.1
 
 dev_dependencies:
   flutter_test:
