--- a/clarify_app/pubspec.yaml
+++ b/clarify_app/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   path_provider: ^2.1.1
   audioplayers: ^5.2.1
   assets_audio_player: ^3.1.1
+  speech_to_text: ^6.4.1
 
 dev_dependencies:
   flutter_test:
